# Meta

./: Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt  uv.toml
baseline/: __init__.py  policy.py
config/: openenv.yaml
env/: __init__.py  env.py  models.py
grader/: __init__.py  grader.py
inference/: inference.py
scenario/: __init__.py  scenario.py
server/: __init__.py  app.py
server/static/: app.js  index.html  styles.css
tests/: test_env.py
