[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recalltrace-openenv"
version = "1.0.0"
description = "Deterministic OpenEnv environment for supply-chain recall tracing and precision containment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "openai>=2.7.2,<3.0.0",
  "openenv-core>=0.2.0",
  "pydantic>=2.7.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "grader", "scenario", "baseline", "server"]
